# nicelib

./: LICENSE  README.md  cli.py  pyproject.toml  tox.toml
nicelib/: cli.py
tests/: test_all.py
tests/samples/: github_sample.json  pypi_sample.json
